--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
